infra/k8s/medium-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medium-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medium
  template:
    metadata:
      labels:
        app: medium
    spec:
      containers:
        - name: medium
          image: mirellyssl/medium
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: medium-srv
spec:
  selector:
    app: medium
  ports:
    - name: medium
      protocol: TCP
      port: 4000
      targetPort: 4000
