infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: myprofile.dev
  - http:
      paths:
      - path: /medium
        pathType: Prefix
        backend:
          service:
            name: medium-srv
            port:
              number: 4000
